--- a/docker/api/Dockerfile
+++ b/docker/api/Dockerfile
@@ -1,19 +1,16 @@
 # Imagen base para ejecutar la aplicación
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
-
 WORKDIR /app
 
-# Copiar el archivo ZIP desde api-drop
-COPY EmployeeCrudApi.zip .
+# Copiar los binarios preconstruidos de la API desde el artifact 'drop-back/employeecrudapi'
+COPY ./EmployeeCrudApi/ ./
 
-# Instalar unzip y descomprimir el archivo ZIP
-RUN apt-get update && apt-get install -y unzip && unzip EmployeeCrudApi.zip -d /app && rm EmployeeCrudApi.zip
-
-# Exponer el puerto 80
+# Exponer los puertos 80 (HTTP) y 443 (HTTPS)
 EXPOSE 80
+EXPOSE 443
 
-# Configurar las URLs para que la aplicación escuche en HTTP
-ENV ASPNETCORE_URLS="http://+:80"
+# Configurar las URLs para que la aplicación escuche en HTTP y HTTPS
+ENV ASPNETCORE_URLS="http://+:80;https://+:443"
 
 # Comando para ejecutar la aplicación
 ENTRYPOINT ["dotnet", "EmployeeCrudApi.dll"]
