--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -175,8 +175,8 @@ stages:
               artifact: 'dockerfile-front'
 
 #----------------------------------------------------------
-# ### STAGE BUILD DOCKER IMAGES Y PUSH A AZURE CONTAINER REGISTRY
-#----------------------------------------------------------
+  # ### STAGE BUILD DOCKER IMAGES Y PUSH A AZURE CONTAINER REGISTRY
+  #----------------------------------------------------------
   - stage: DockerBuildAndPush
     displayName: 'Construir y Subir Imágenes Docker a ACR'
     dependsOn: BuildAndAnalyze
@@ -185,21 +185,17 @@ stages:
         displayName: 'Construir y Subir Imágenes Docker a ACR'
         pool:
           vmImage: 'ubuntu-latest'
-
+          
         steps:
           - checkout: self
-
-          #----------------------------------------------------------
-          # BUILD DOCKER BACK IMAGE Y PUSH A AZURE CONTAINER REGISTRY
-          #----------------------------------------------------------
 
           - task: DownloadPipelineArtifact@2
             displayName: 'Descargar Artefactos de Back'
             inputs:
               buildType: 'current'
-              artifactName: 'api-drop'
-              targetPath: '$(Pipeline.Workspace)/api-drop'
-
+              artifactName: 'drop-back'
+              targetPath: '$(Pipeline.Workspace)/drop-back'
+          
           - task: DownloadPipelineArtifact@2
             displayName: 'Descargar Dockerfile de Back'
             inputs:
@@ -215,14 +211,14 @@ stages:
               scriptLocation: inlineScript
               inlineScript: |
                 az acr login --name $(acrLoginServer)
-
+      
           - task: Docker@2
             displayName: 'Construir Imagen Docker para Back'
             inputs:
               command: build
               repository: $(acrLoginServer)/$(backImageName)
-              dockerfile: $(Pipeline.Workspace)/dockerfile-back/Dockerfile
-              buildContext: $(Pipeline.Workspace)/api-drop
+              dockerfile: $(Pipeline.Workspace)/dockerfile-back/dockerfile
+              buildContext: $(Pipeline.Workspace)/drop-back
               tags: 'latest'
 
           - task: Docker@2
@@ -232,17 +228,21 @@ stages:
               repository: $(acrLoginServer)/$(backImageName)
               tags: 'latest'
 
-          #----------------------------------------------------------
-          # BUILD DOCKER FRONT IMAGE Y PUSH A AZURE CONTAINER REGISTRY
-          #----------------------------------------------------------
+      - job: docker_build_and_push_front
+        displayName: 'Construir y Subir Imagen Docker de Front a ACR'
+        pool:
+          vmImage: 'ubuntu-latest'
+          
+        steps:
+          - checkout: self
 
           - task: DownloadPipelineArtifact@2
             displayName: 'Descargar Artefactos de Front'
             inputs:
               buildType: 'current'
-              artifactName: 'front-drop'
-              targetPath: '$(Pipeline.Workspace)/front-drop'
-
+              artifactName: 'drop-front'
+              targetPath: '$(Pipeline.Workspace)/drop-front'
+          
           - task: DownloadPipelineArtifact@2
             displayName: 'Descargar Dockerfile de Front'
             inputs:
@@ -250,13 +250,22 @@ stages:
               artifactName: 'dockerfile-front'
               targetPath: '$(Pipeline.Workspace)/dockerfile-front'
 
+          - task: AzureCLI@2
+            displayName: 'Iniciar Sesión en Azure Container Registry (ACR)'
+            inputs:
+              azureSubscription: '$(ConnectedServiceName)'
+              scriptType: bash
+              scriptLocation: inlineScript
+              inlineScript: |
+                az acr login --name $(acrLoginServer)
+      
           - task: Docker@2
             displayName: 'Construir Imagen Docker para Front'
             inputs:
               command: build
               repository: $(acrLoginServer)/$(frontImageName)
-              dockerfile: $(Pipeline.Workspace)/dockerfile-front/Dockerfile
-              buildContext: $(Pipeline.Workspace)/front-drop
+              dockerfile: $(Pipeline.Workspace)/dockerfile-front/dockerfile
+              buildContext: $(Pipeline.Workspace)/drop-front
               tags: 'latest'
 
           - task: Docker@2
@@ -265,50 +274,45 @@ stages:
               command: push
               repository: $(acrLoginServer)/$(frontImageName)
               tags: 'latest'
-
-#----------------------------------------------------------
-# ### STAGE DEPLOY TO ACI QA
-#----------------------------------------------------------
-
+  #----------------------------------------------------------
+  # ### STAGE DEPLOY TO ACI QA
+  #----------------------------------------------------------
   - stage: DeployToACIQA
     displayName: 'Desplegar en Azure Container Instances (ACI) QA'
-    dependsOn: DockerBuildAndPush
+    dependsOn: BuildAndAnalyze
     jobs:
       - job: deploy_to_aci_qa
         displayName: 'Desplegar en Azure Container Instances (ACI) QA'
         pool:
           vmImage: 'ubuntu-latest'
-
         steps:
-          #------------------------------------------------------
-          # DEPLOY DOCKER BACK IMAGE A AZURE CONTAINER INSTANCES QA
-          #------------------------------------------------------
+      
 
-          - task: AzureCLI@2
-            displayName: 'Desplegar Imagen Docker de Back en ACI QA'
-            inputs:
-              azureSubscription: '$(ConnectedServiceName)'
-              scriptType: bash
-              scriptLocation: inlineScript
-              inlineScript: |
-                echo "Resource Group: $(ResourceGroupName)"
-                echo "Container Instance Name: $(backContainerInstanceNameQA)"
-                echo "ACR Login Server: $(acrLoginServer)"
-                echo "Image Name: $(backImageName)"
-                echo "Image Tag: $(backImageTag)"
-                echo "Connection String: $(cnn_string_qa)"
-                
-                az container delete --resource-group $(ResourceGroupName) --name $(backContainerInstanceNameQA) --yes
+        - task: AzureCLI@2
+          displayName: 'Desplegar Imagen Docker de Back en ACI QA'
+          inputs:
+            azureSubscription: '$(ConnectedServiceName)'
+            scriptType: bash
+            scriptLocation: inlineScript
+            inlineScript: |
+              echo "Resource Group: $(ResourceGroupName)"
+              echo "Container Instance Name: $(backContainerInstanceNameQA)"
+              echo "ACR Login Server: $(acrLoginServer)"
+              echo "Image Name: $(backImageName)"
+              echo "Image Tag: $(backImageTag)"
+              echo "Connection String: $(cnn_string_qa)"
+          
+              az container delete --resource-group $(ResourceGroupName) --name $(backContainerInstanceNameQA) --yes
 
-                az container create --resource-group $(ResourceGroupName) \
-                  --name $(backContainerInstanceNameQA) \
-                  --image $(acrLoginServer)/$(backImageName):$(backImageTag) \
-                  --registry-login-server $(acrLoginServer) \
-                  --registry-username $(acrName) \
-                  --registry-password $(az acr credential show --name $(acrName) --query "passwords[0].value" -o tsv) \
-                  --dns-name-label $(backContainerInstanceNameQA) \
-                  --ports 80 \
-                  --environment-variables ConnectionStrings__DefaultConnection="$(cnn_string_qa)" \
-                  --restart-policy Always \
-                  --cpu $(container-cpu-api-qa) \
-                  --memory $(container-memory-api-qa)
+              az container create --resource-group $(ResourceGroupName) \
+                --name $(backContainerInstanceNameQA) \
+                --image $(acrLoginServer)/$(backImageName):$(backImageTag) \
+                --registry-login-server $(acrLoginServer) \
+                --registry-username $(acrName) \
+                --registry-password $(az acr credential show --name $(acrName) --query "passwords[0].value" -o tsv) \
+                --dns-name-label $(backContainerInstanceNameQA) \
+                --ports 80 \
+                --environment-variables ConnectionStrings__DefaultConnection="$(cnn_string_qa)" \
+                --restart-policy Always \
+                --cpu $(container-cpu-api-qa) \
+                --memory $(container-memory-api-qa)
