Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ variables:
   acrName: 'ftmingsoft3uccacr' # Nombre de tu ACR sin el sufijo .azurecr.io
 
 stages:
-  - stage: BuildAndAnalyze
+  - stage: BuildAndTestBackAndFront
     displayName: 'Build, Test and Analyze API and Front'
     jobs:
       - job: BuildDotnet
@@ -173,4 +173,147 @@ stages:
             inputs:
               targetPath: '$(Build.SourcesDirectory)/docker/front/Dockerfile'
               artifact: 'dockerfile-front'
+
+#----------------------------------------------------------
+  # ### STAGE BUILD DOCKER IMAGES Y PUSH A AZURE CONTAINER REGISTRY
+  #----------------------------------------------------------
+  - stage: DockerBuildAndPush
+    displayName: 'Construir y Subir Imágenes Docker a ACR'
+    dependsOn: BuildAndTestBackAndFront
+    jobs:
+      - job: docker_build_and_push
+        displayName: 'Construir y Subir Imágenes Docker a ACR'
+        pool:
+          vmImage: 'ubuntu-latest'
+          
+        steps:
+          - checkout: self
+
+          - task: DownloadPipelineArtifact@2
+            displayName: 'Descargar Artefactos de Back'
+            inputs:
+              buildType: 'current'
+              artifactName: 'drop-back'
+              targetPath: '$(Pipeline.Workspace)/drop-back'
+          
+          - task: DownloadPipelineArtifact@2
+            displayName: 'Descargar Dockerfile de Back'
+            inputs:
+              buildType: 'current'
+              artifactName: 'dockerfile-back'
+              targetPath: '$(Pipeline.Workspace)/dockerfile-back'
+
+          - task: AzureCLI@2
+            displayName: 'Iniciar Sesión en Azure Container Registry (ACR)'
+            inputs:
+              azureSubscription: '$(ConnectedServiceName)'
+              scriptType: bash
+              scriptLocation: inlineScript
+              inlineScript: |
+                az acr login --name $(acrLoginServer)
+      
+          - task: Docker@2
+            displayName: 'Construir Imagen Docker para Back'
+            inputs:
+              command: build
+              repository: $(acrLoginServer)/$(backImageName)
+              dockerfile: $(Pipeline.Workspace)/dockerfile-back/dockerfile
+              buildContext: $(Pipeline.Workspace)/drop-back
+              tags: 'latest'
+
+          - task: Docker@2
+            displayName: 'Subir Imagen Docker de Back a ACR'
+            inputs:
+              command: push
+              repository: $(acrLoginServer)/$(backImageName)
+              tags: 'latest'
+
+      - job: docker_build_and_push_front
+        displayName: 'Construir y Subir Imagen Docker de Front a ACR'
+        pool:
+          vmImage: 'ubuntu-latest'
+          
+        steps:
+          - checkout: self
+
+          - task: DownloadPipelineArtifact@2
+            displayName: 'Descargar Artefactos de Front'
+            inputs:
+              buildType: 'current'
+              artifactName: 'drop-front'
+              targetPath: '$(Pipeline.Workspace)/drop-front'
+          
+          - task: DownloadPipelineArtifact@2
+            displayName: 'Descargar Dockerfile de Front'
+            inputs:
+              buildType: 'current'
+              artifactName: 'dockerfile-front'
+              targetPath: '$(Pipeline.Workspace)/dockerfile-front'
+
+          - task: AzureCLI@2
+            displayName: 'Iniciar Sesión en Azure Container Registry (ACR)'
+            inputs:
+              azureSubscription: '$(ConnectedServiceName)'
+              scriptType: bash
+              scriptLocation: inlineScript
+              inlineScript: |
+                az acr login --name $(acrLoginServer)
+      
+          - task: Docker@2
+            displayName: 'Construir Imagen Docker para Front'
+            inputs:
+              command: build
+              repository: $(acrLoginServer)/$(frontImageName)
+              dockerfile: $(Pipeline.Workspace)/dockerfile-front/dockerfile
+              buildContext: $(Pipeline.Workspace)/drop-front
+              tags: 'latest'
+
+          - task: Docker@2
+            displayName: 'Subir Imagen Docker de Front a ACR'
+            inputs:
+              command: push
+              repository: $(acrLoginServer)/$(frontImageName)
+              tags: 'latest'
+  #----------------------------------------------------------
+  # ### STAGE DEPLOY TO ACI QA
+  #----------------------------------------------------------
+  - stage: DeployToACIQA
+    displayName: 'Desplegar en Azure Container Instances (ACI) QA'
+    dependsOn: DockerBuildAndPush 
+    jobs:
+      - job: deploy_to_aci_qa
+        displayName: 'Desplegar en Azure Container Instances (ACI) QA'
+        pool:
+          vmImage: 'ubuntu-latest'
+        steps:
+      
+
+        - task: AzureCLI@2
+          displayName: 'Desplegar Imagen Docker de Back en ACI QA'
+          inputs:
+            azureSubscription: '$(ConnectedServiceName)'
+            scriptType: bash
+            scriptLocation: inlineScript
+            inlineScript: |
+              echo "Resource Group: $(ResourceGroupName)"
+              echo "Container Instance Name: $(backContainerInstanceNameQA)"
+              echo "ACR Login Server: $(acrLoginServer)"
+              echo "Image Name: $(backImageName)"
+              echo "Image Tag: $(backImageTag)"
+              echo "Connection String: $(cnn_string_qa)"
+          
+              az container delete --resource-group $(ResourceGroupName) --name $(backContainerInstanceNameQA) --yes
+
+              az container create --resource-group $(ResourceGroupName) \
+                --name $(backContainerInstanceNameQA) \
+                --image $(acrLoginServer)/$(backImageName):$(backImageTag) \
+                --registry-login-server $(acrLoginServer) \
+                --registry-username $(acrName) \
+                --registry-password $(az acr credential show --name $(acrName) --query "passwords[0].value" -o tsv) \
+                --dns-name-label $(backContainerInstanceNameQA) \
+                --ports 80 \
+                --environment-variables ConnectionStrings__DefaultConnection="$(cnn_string_qa)" \
+                --restart-policy Always \
+                --cpu $(container-cpu-api-qa) \
+                --memory $(container-memory-api-qa)
 
