Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -93,7 +93,7 @@ stages:
             displayName: 'Publicar artefactos de compilación'
             inputs:
               PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-              ArtifactName: 'api-drop'
+              ArtifactName: 'drop-back'
               publishLocation: 'Container'
 
           # Análisis de código con SonarCloud
