--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -86,7 +86,7 @@ stages:
               command: publish
               publishWebProjects: True
               arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
-              zipAfterPublish: true
+              zipAfterPublish: false
 
           # Publicar artefactos de compilación
           - task: PublishBuildArtifacts@1
